
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:stretchColumns="*"
    android:baselineAligned="false"
    android:gravity="bottom"
    android:background="@drawable/dailysprintlogolight">
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:stretchColumns="*">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/today"
            android:layout_gravity="fill_horizontal"
            android:id="@+id/textView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="fill_horizontal"
            android:textSize="10dp"
            android:id="@+id/textView2"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp">

        <Button
            android:text="@string/schedule"
            android:id="@+id/buttonSchedule"
            android:enabled="true"
            android:onClick="buttonScheduleOnClick"
            android:layout_gravity="center"/>

        <Button
            android:text="@string/history"
            android:id="@+id/buttonHistory"
            android:enabled="true"
            android:onClick="buttonHistoryOnClick"
            android:layout_gravity="center" />
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp">

        <Button
            android:text="@string/friends"
            android:id="@+id/buttonFriends"
            android:enabled="true"
            android:onClick="buttonFriendsOnClick"
            android:layout_gravity="center"/>

        <Button
            android:text="@string/settings"
            android:id="@+id/buttonSettings"
            android:enabled="true"
            android:onClick="buttonSettingsOnClick"
            android:layout_gravity="center" />
    </TableRow>


</TableLayout>



