<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/separator"
        android:choiceMode="singleChoice"
        android:text="@string/accept_friend_request"
        android:textSize="50sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/separator"
        android:layout_above="@+id/buttonAccept"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/buttonAccept"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonAcceptOnClick" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:id="@+id/buttonDeleteDecline"
        android:layout_alignTop="@+id/buttonAccept"
        android:layout_alignParentEnd="true"
        android:onClick="buttonDeclineOnClick" />


</RelativeLayout>
