<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/dailysprintlogolight">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listFriends"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/separator"
        android:choiceMode="singleChoice" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/separator"
        android:layout_above="@+id/buttonRequestFriend"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestfriend"
        android:id="@+id/buttonRequestFriend"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonRequestFriendOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        android:id="@+id/buttonMessages"
        android:layout_below="@+id/separator"
        android:layout_centerHorizontal="true"
        android:onClick="buttonMessagesOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletefriend"
        android:id="@+id/buttonDeleteFriend"
        android:layout_alignTop="@+id/buttonRequestFriend"
        android:layout_alignParentEnd="true"
        android:onClick="buttonDeleteFriendOnClick" />


</RelativeLayout>
