<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="comp3350.dailysprint.presentation.CreateUserProfile"
    android:background="@drawable/dailysprintlogolight">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="300px"
        android:layout_weight="0.1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Weight (kg):"
            android:id="@+id/textView" />

        <ListView android:id="@+id/lv1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:dividerHeight="2px"
            android:choiceMode="singleChoice" >
        </ListView>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="300px"
        android:layout_weight="0.1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Age:"
            android:id="@+id/textView2" />

        <ListView android:id="@+id/lv2"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:dividerHeight="2px">
        </ListView>



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="300px"
        android:layout_weight="0.1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Height (cm):"
            android:id="@+id/textView3" />

        <ListView android:id="@+id/lv3"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:dividerHeight="2px">
        </ListView>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:orientation="vertical"
        android:rowCount="1"
        android:columnCount="4">

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="246dp"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="@string/next"
            android:layout_gravity="fill"
            android:onClick="buttonUserContinueOnClick" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_gravity="fill">
            <RadioButton android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </GridLayout>

</LinearLayout>
